--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,12 @@
   /* top: 0;
    position: sticky; */
   background-color: #282c34;
-  min-height: 80px;
+  height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
- 
+
   font-size: calc(10px + 2vmin);
   color: rgb(248, 223, 223);
   box-shadow: 0px 4px 5px 0px grey;
@@ -78,9 +78,10 @@ div.menuItemLogo {
   align-items: center;
   flex: 1;
   background-color: #fafafd;
-  /* border: 3px solid yellow; */
+  /* border: 3px solid red; */
 }
-.saiLogoDiv{
+
+.saiLogoDiv {
   width: 50px;
   height: 50px;
   /* margin: 5px 10px; */
@@ -112,19 +113,19 @@ div.menuItemLogo {
   justify-content: center;
   align-items: center;
   /* min-width: 400px; */
-  width: 100%;
+  /* width: 100%; */
   background-color: #fafafd;
   z-index: 100;
   /* flex: 1; */
-  height: 100px;
+  height: 70px;
   /* border: 1px solid black; */
   margin: 5px 0;
   /* opacity: 0; */
   /* opacity: .8; */
 }
 .moduleSelector1 {
-  position: sticky;
-  top: 3px;
+  position: fixed;
+  top: 2px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -136,10 +137,15 @@ div.menuItemLogo {
   z-index: 100;
   height: 70px;
   margin: 5px 0;
-border-radius: 2px;
-  visibility: visible;
-  opacity: .85;
+  border-radius: 2px;
+  /* visibility: visible; */
+  opacity: 0.85;
   transition: top 1s, background-color 500ms ease-out 0s;
+  -webkit-animation: expand 500ms;
+}
+@-webkit-keyframes expand{
+  0%{height:0px}
+  100%{height:70px}
 }
 
 .moduleSelector > button {
@@ -151,7 +157,9 @@ border-radius: 2px;
 .moduleContainer {
   display: flex;
   flex-direction: column;
-  /* width: 50%; */
+  justify-content: center;
+  align-self: center;
+  /* min-width: 400px; */
   /* flex: 1; */
   /* min-width: 500px; */
   /* max-width: 50%; */
@@ -160,7 +168,12 @@ border-radius: 2px;
   margin: 5px 0;
   padding: 5px 20px;
 }
-
+.message {
+  color: red;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
 .moduleCard {
   display: flex;
   flex-direction: column;
@@ -197,19 +210,18 @@ border-radius: 2px;
   margin: 5px 0;
 }
 
-.btn1  {
+.btn1 {
   background-color: var(--bs-primary);
   border: none;
   color: white;
   border-radius: 4px;
-  font-size: .875rem;
+  font-size: 0.875rem;
   /* width: 100%; */
-  padding: .25rem .5rem;
+  padding: 0.25rem 0.5rem;
 }
 .btn1:focus {
   box-shadow: 0 0 4px rgb(70, 46, 109);
 }
 .btn1:hover {
-
   background-color: var(--bs-primary-dark);
 }
