--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,20 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
   font-size: calc(10px + 2vmin);
   color: rgb(248, 223, 223);
   box-shadow: 0px 4px 5px 0px grey;
   z-index: 100;
 }
+.App-header > div:nth-of-type(3){
+  margin-left: auto;
+}
+.App-header > div:nth-of-type(2){
+  margin-left: auto;
+}
+
 div.menuItemLogo {
   width: 50px;
   height: 50px;
@@ -254,6 +261,9 @@ div.menuItemLogo {
 }
 .smallFont {
   font-size: .8rem;
+}
+.mediumFont {
+  font-size: 1.2rem;
 }
 .red{
   color: red;
