--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,9 @@ div.menuItemLogo {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(8px + 1vmin);
-  color: rgb(248, 223, 223);
+  font-size: .9em;
+  /* color: rgb(248, 223, 223); */
+  color: grey;
 }
 
 .moduleSelector {
@@ -267,6 +268,9 @@ div.menuItemLogo {
 }
 .red{
   color: red;
+}
+.blue{
+  color: blue;
 }
 .btn1 {
   background-color: var(--bs-primary);
