--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@
   margin-left: auto;
 }
 
+a:link {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
 div.menuItemLogo {
   width: 50px;
   height: 50px;
@@ -131,6 +138,7 @@ div.menuItemLogo {
   /* border: 1px solid black; */
   margin-right: 10px;
   /* background-repeat: no-repeat, repeat; */
+  background-image: url("sailogo.png");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
@@ -213,6 +221,7 @@ div.menuItemLogo {
 }
 .message {
   color: red;
+  font-weight: bold;
   width: 100%;
   max-height: 200px;
   overflow-y: auto;
